# ai-rulez

./: .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  ai_rulez.yaml  go.mod  go.sum  lefthook.yml  main.go  mcp_test.go  package.json  taskfile.yaml  todos.md
.github/: dependabot.yml
.github/workflows/: ci.yml  installation-tests.yml  release.yml
cmd/ai_rules/: generate.go  init.go  root.go  validate.go
cmd/airules/: generate.go  init.go  profile.go  root.go  validate.go  version.go
examples/: full-featured.yaml  simple.yaml  with-sections-clean.yaml
internal/config/: add_test.go  config.go  config_no_profile.go  config_test.go  finder.go  finder_test.go  loader.go  loader_test.go  schema.go  schema_test.go
internal/generator/: generator.go  generator_bench_test.go  generator_large_bench_test.go  generator_optimization_test.go  generator_optimized.go  generator_test.go
internal/gitignore/: gitignore.go  gitignore_test.go
internal/templates/: template.go  template_test.go
schema/: README.md  ai-rules-v1.schema.json
test/: pyproject.toml
test/integration/: biome.json  npm-installation.test.ts  npm_install_test.js  package.json  python_install_test.py  python_installation_test.py  tsconfig.json  vitest.config.ts
testing/: README.md  benchmark_test.go  cli_integration_test.go  go.mod  integration_test.go  profile_test.go  simple_output.md  simple_test.yaml
testing/includes/: react.yaml  security.yaml  typescript.yaml
testing/suites/: basic_commands.json  config_discovery.json  (+3 more)
(+31 files in other folders)
